# chronos-plg

./: .gitignore  CODEBASE-PLAN-V-0.1.md  LICENSE  Makefile  PUBLICATION_NOTES.md  README.md  data_schema.json  experiment_spec.md  pyproject.toml  target_definitions.md
.github/workflows/: ci.yml
artifacts/public/: README.md  phase10_showcase_leaderboard.csv  phase11_4h_threshold_sensitivity.csv  phase11_margin_threshold_top.csv  phase11_spot_threshold_top.csv  public_evidence_snapshot.json  public_evidence_snapshot.md
config/: __init__.py  baseline_protocols.py  cost_profiles.py  scenario_profiles.py  settings.py
data/: README.md
docs/: case-study.md  experiment-log.md  index.md  legacy-trading-mining-report.md  methodology.md  portfolio-copy.md  profitability-track.md  project-status.md  reproducibility.md  results.md  roadmap.md
docs/codebase-inventory-v0.1.0/: 01-system-overview-and-current-state.md  02-architecture-and-pipeline.md  03-module-and-script-inventory.md  04-models-strategy-and-cost-mechanics.md  05-evaluation-robustness-and-decision-flow.md  06-performance-status-and-strategy-health.md  07-capability-matrix-gaps-and-next-actions.md  99-appendix-file-level-inventory.md  README.md  codebase-inventory-v0.1.0.md
plans/: 2026-04-11-portfolio-publication-implementation-plan.md  2026-06-08-chronos-portfolio-publication-research-roadmap-implementation-plan.md  2026-06-11-legacy-trading-signal-mining-implementation-plan.md
scripts/: benchmark.py  build_features.py  download_data.py  generate_public_report.py  plot_public_results.py  run_backtest.py  run_baselines.py  run_chronos2.py  run_feature_ablation.py  run_paper_trading.py  run_phase11_promotion_campaign.py  run_phase11_sweep.py  smoke_check.py
src/: __init__.py
src/backtest/: __init__.py  costs.py  engine.py  report.py
src/common/: __init__.py  metrics.py  timeframe.py
src/data/: __init__.py  binance_fetcher.py  build_dataset.py  contracts.py  (+6 more)
tests/: test_baselines.py  test_costs_phase4.py  test_data_pipeline.py  test_phase0_phase1.py  test_phase10_paper_trading.py  test_phase11_kill_switch_diagnostics.py  test_phase11_multi_objective.py  test_phase11_promotion_campaign.py  test_phase11_timeframe.py  test_phase3_leakage.py  test_phase6_baselines.py  test_phase7_chronos.py  test_phase8_robustness.py  test_phase9_reporting.py  test_strategy.py  test_technical_features.py
(+32 files in other folders)
