[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chronos-plg"
version = "0.1.0"
description = "Phase-gated BTC trading research platform with probabilistic forecasting, cost-aware backtesting, and paper-trading governance"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Amir Azadfar" }
]

dependencies = [
    # Core
    "pandas>=2.0",
    "numpy>=1.24",
    "polars>=0.20",
    
    # Data fetching
    "python-binance>=1.0.19",
    "yfinance>=0.2.36",
    "websockets>=12.0",
    "aiohttp>=3.9",
    "requests>=2.31",
    
    # ML
    "scikit-learn>=1.4",
    "lightgbm>=4.0",
    
    # Deep Learning (for Chronos-2)
    "torch>=2.0",
    "transformers>=4.35",
    
    # Evaluation
    "scipy>=1.11",
    
    # Visualization
    "matplotlib>=3.8",
    "plotly>=5.18",
    "seaborn>=0.13",
    
    # Utils
    "tqdm>=4.66",
    "pyarrow>=14.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.7",
    "pre-commit>=3.6",
]
notebooks = [
    "jupyter>=1.0",
    "ipywidgets>=8.1",
    "nbformat>=5.9",
]

[project.scripts]
download-data = "scripts.download_data:main"
build-features = "scripts.build_features:main"
run-backtest = "scripts.run_backtest:main"
run-baselines = "scripts.run_baselines:main"
run-chronos2 = "scripts.run_chronos2:main"
run-benchmark = "scripts.benchmark:main"
smoke-check = "scripts.smoke_check:main"
run-paper-trading = "scripts.run_paper_trading:main"
generate-public-report = "scripts.generate_public_report:main"
plot-public-results = "scripts.plot_public_results:main"

[project.urls]
Homepage = "https://github.com/amazadfar/chronos-plg"
Repository = "https://github.com/amazadfar/chronos-plg"
Documentation = "https://github.com/amazadfar/chronos-plg/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
